# netbox-device-autodiscover

./: .gitignore  CONFIGURATION_GUIDE.md  HOW_TO_SEE_IT_WORKING.md  INSTALL_HOME_ASSISTANT.md  INSTALL_NOW.md  LICENSE  MANIFEST.in  MANUAL_MIGRATION.md  PUBLISH_INSTRUCTIONS.md  PUBLISH_TO_PYPI.md  QUICK_START.md  README.md  TESTING_GUIDE.md  publish.sh  pyproject.toml  requirements.txt  setup.py
netbox_device_autodiscovery/: __init__.py  admin.py  apps.py  discovery.py  models.py  navigation.py  signals.py
netbox_device_autodiscovery/migrations/: 0001_initial.py
